Bug 832508 - When resuming Fennec and re-recreating the surface, force a first-paint notification from the compositor. r=Cwiiis