widget/android/nsWindow.h
@@ -156,6 +156,7 @@ public:
     static void ScheduleComposite();
     static void SchedulePauseComposition();
     static void ScheduleResumeComposition(int width, int height);
+    static void ForceIsFirstPaint();
     static float ComputeRenderIntegrity();
 
     virtual bool WidgetPaintsBackground();
